# Radye-Engine

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  application.cpp  application.hpp  engine.cpp  input.hpp
src/input/: keyboard.hpp  mouse.hpp
tools/cmake/: c_standards.cmake  compiler_options.cmake  cxx_standards.cmake  engine_src.cmake  formatting.cmake  thirdparty.cmake
